<resources>
    <string name="app_name">Taller 2</string>

    <string name="title_activity_drawer">Taller 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_home">Inicio</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_available">Disponible</string>
    <string name="menu_disabled">Desactivar</string>
    <string name="menu_users">Usuarios</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_markers_map">Map</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>