<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_available"
            android:icon="@drawable/ic_menu_available"
            android:title="@string/menu_available" />
        <item
            android:id="@+id/nav_disabled"
            android:icon="@drawable/ic_menu_disabled"
            android:title="@string/menu_disabled" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_users"
            android:title="@string/menu_users" />
    </group>
    <item android:title="Sesión">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>